--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,7 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
-html,
+@layer base {
+
+  html,
+  body,
+  #__next {
+    @apply p-0 m-0 w-full h-full;
+  }
+}
+
+/* html,
 body {
   padding: 0;
   margin: 0;
@@ -27,4 +36,4 @@ a {
     color: white;
     background: black;
   }
-}
+} */
